# CubismNativeFramework

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  License_en.txt  License_ja.txt  NOTICE.ja.md  NOTICE.md  README.ja.md  README.md  TRANSLATION.md
src/Rendering/: CMakeLists.txt  CubismClippingManager.hpp  CubismClippingManager.tpp  CubismRenderTarget.hpp  CubismRenderer.cpp  CubismRenderer.hpp  ICubismOffscreenManager.hpp  ICubismOffscreenRenderTarget.hpp  csmBlendMode.cpp  csmBlendMode.hpp
src/Rendering/Cocos2d/: CMakeLists.txt  CubismCommandBuffer_Cocos2dx.cpp  CubismCommandBuffer_Cocos2dx.hpp  CubismOffscreenSurface_Cocos2dx.cpp  CubismOffscreenSurface_Cocos2dx.hpp  CubismRenderer_Cocos2dx.cpp  CubismRenderer_Cocos2dx.hpp  CubismShader_Cocos2dx.cpp  CubismShader_Cocos2dx.hpp
src/Rendering/D3D11/: CMakeLists.txt  CubismDeviceInfo_D3D11.cpp  CubismDeviceInfo_D3D11.hpp  CubismNativeInclude_D3D11.hpp  CubismOffscreenManager_D3D11.cpp  CubismOffscreenManager_D3D11.hpp  CubismOffscreenRenderTarget_D3D11.cpp  CubismOffscreenRenderTarget_D3D11.hpp  CubismOffscreenSurface_D3D11.cpp  CubismOffscreenSurface_D3D11.hpp  CubismRenderState_D3D11.cpp  CubismRenderState_D3D11.hpp  CubismRenderTarget_D3D11.cpp  CubismRenderTarget_D3D11.hpp  CubismRenderer_D3D11.cpp  CubismRenderer_D3D11.hpp  CubismShader_D3D11.cpp  CubismShader_D3D11.hpp  CubismType_D3D11.hpp
src/Rendering/D3D11/Shaders/: CubismBlendMode.fx  CubismEffect.fx
src/Rendering/D3D9/: CMakeLists.txt  CubismDeviceInfo_D3D9.cpp  CubismDeviceInfo_D3D9.hpp  CubismNativeInclude_D3D9.hpp  CubismOffscreenManager_D3D9.cpp  CubismOffscreenManager_D3D9.hpp  CubismOffscreenRenderTarget_D3D9.cpp  CubismOffscreenRenderTarget_D3D9.hpp  CubismOffscreenSurface_D3D9.cpp  CubismOffscreenSurface_D3D9.hpp  CubismRenderState_D3D9.cpp  CubismRenderState_D3D9.hpp  CubismRenderTarget_D3D9.cpp  CubismRenderTarget_D3D9.hpp  CubismRenderer_D3D9.cpp  CubismRenderer_D3D9.hpp  CubismShader_D3D9.cpp  CubismShader_D3D9.hpp  CubismType_D3D9.hpp
src/Rendering/D3D9/Shaders/: CubismBlendMode.fx  CubismEffect.fx
src/Rendering/Metal/: CMakeLists.txt  CubismCommandBuffer_Metal.hpp  CubismCommandBuffer_Metal.mm  CubismDeviceInfo_Metal.hpp  CubismDeviceInfo_Metal.mm  CubismOffscreenManager_Metal.hpp  CubismOffscreenManager_Metal.mm  CubismOffscreenRenderTarget_Metal.hpp  CubismOffscreenRenderTarget_Metal.mm  CubismOffscreenSurface_Metal.hpp  CubismOffscreenSurface_Metal.mm  CubismRenderTarget_Metal.hpp  CubismRenderTarget_Metal.mm  CubismRenderer_Metal.hpp  CubismRenderer_Metal.mm  CubismShader_Metal.hpp  CubismShader_Metal.mm  MetalShaderTypes.h  MetalShaders.metal
src/Rendering/Metal/Shaders/: BlendShaderFuncs.h  BlendShaderStructs.h  CMakeLists.txt  FragShaderSrcAlphaBlend.metal  FragShaderSrcBlend.metal  FragShaderSrcColorBlend.metal  FragShaderSrcMaskBlend.metal  FragShaderSrcMaskInvertedBlend.metal  FragShaderSrcMaskInvertedPremultipliedAlphaBlend.metal  FragShaderSrcMaskPremultipliedAlphaBlend.metal  FragShaderSrcPremultipliedAlphaBlend.metal  MetalShaders.metal  VertShaderSrcBlend.metal  VertShaderSrcMaskedBlend.metal
src/Rendering/OpenGL/: CMakeLists.txt  CubismOffscreenManager_OpenGLES2.cpp  CubismOffscreenManager_OpenGLES2.hpp  CubismOffscreenRenderTarget_OpenGLES2.cpp  CubismOffscreenRenderTarget_OpenGLES2.hpp  CubismOffscreenSurface_OpenGLES2.cpp  CubismOffscreenSurface_OpenGLES2.hpp  CubismRenderTarget_OpenGLES2.cpp  CubismRenderTarget_OpenGLES2.hpp  CubismRenderer_OpenGLES2.cpp  CubismRenderer_OpenGLES2.cpp~RF192eabe6.TMP  CubismRenderer_OpenGLES2.hpp  CubismShader_OpenGLES2.cpp  CubismShader_OpenGLES2.hpp
src/Rendering/OpenGL/Shaders/Standard/: FragShaderSrc.frag  FragShaderSrcAlphaBlend.frag  FragShaderSrcBlend.frag  FragShaderSrcCopy.frag  FragShaderSrcMask.frag  FragShaderSrcMaskBlend.frag  FragShaderSrcMaskInverted.frag  FragShaderSrcMaskInvertedBlend.frag  FragShaderSrcMaskInvertedPremultipliedAlpha.frag  FragShaderSrcMaskInvertedPremultipliedAlphaBlend.frag  FragShaderSrcMaskPremultipliedAlpha.frag  FragShaderSrcMaskPremultipliedAlphaBlend.frag  FragShaderSrcPremultipliedAlpha.frag  FragShaderSrcPremultipliedAlphaBlend.frag  FragShaderSrcSetupMask.frag  VertShaderSrc.vert  VertShaderSrcBlend.vert  VertShaderSrcCopy.vert  VertShaderSrcMasked.vert  VertShaderSrcMaskedBlend.vert  VertShaderSrcSetupMask.vert
src/Rendering/OpenGL/Shaders/StandardES/: FragShaderSrc.frag  FragShaderSrcBlend.frag  FragShaderSrcBlendTegra.frag  FragShaderSrcColorBlend.frag  FragShaderSrcCopy.frag  FragShaderSrcCopyTegra.frag  FragShaderSrcMask.frag  FragShaderSrcMaskBlend.frag  FragShaderSrcMaskBlendTegra.frag  FragShaderSrcMaskInverted.frag  FragShaderSrcMaskInvertedBlend.frag  FragShaderSrcMaskInvertedBlendTegra.frag  FragShaderSrcMaskInvertedPremultipliedAlpha.frag  FragShaderSrcMaskInvertedTegra.frag  (+21 more)
src/Rendering/Vulkan/: CMakeLists.txt  CubismClass_Vulkan.cpp  CubismClass_Vulkan.hpp  CubismDeviceInfo_Vulkan.cpp  CubismDeviceInfo_Vulkan.hpp  CubismOffscreenManager_Vulkan.cpp  CubismOffscreenManager_Vulkan.hpp  CubismOffscreenRenderTarget_Vulkan.cpp  CubismOffscreenRenderTarget_Vulkan.hpp  CubismOffscreenSurface_Vulkan.cpp  CubismOffscreenSurface_Vulkan.hpp  CubismRenderTarget_Vulkan.cpp  CubismRenderTarget_Vulkan.hpp  CubismRenderer_Vulkan.cpp  CubismRenderer_Vulkan.hpp
src/Rendering/Vulkan/Shaders/: CMakeLists.txt
(+132 files in other folders)
